# liboqs-rust

./: README.md
oqs/: Cargo.toml
oqs-sys/: Cargo.toml
oqs/src/: kem.rs  lib.rs  sig.rs
